# snowssi

./: .gitignore  .pre-commit-config.yaml  README.md  locals.tf  main.py  main.tf  providers.tf  pyproject.toml  terraform.tfvars.example  variables.tf  versions.tf
.github/workflows/: ci-cd.yml  validate-semantic-pr.yml
catalog/modules/aws/s3/: main.tf  output.tf  variables.tf  versions.tf
catalog/modules/snowflake/stage/: main.tf  output.tf  variables.tf  versions.tf
tests/: test_main.py
